# wikiquote-fetcher

./: .gitignore  Cargo.toml  PKGBUILD  README.md
aur/: .SRCINFO  PKGBUILD
src/: lib.rs  main.rs  pool.rs  wikiquote.rs
